--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "topfives.fyi",
   "description": "The Spotify Popularity Guessing Game",
   "authors": "@damofknowledge",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -10,16 +10,20 @@
     "generate": "nuxt generate",
     "lint": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore .",
     "postinstall": "nuxt prepare",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "test": "vitest"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@nuxt/test-utils": "^3.8.0",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@pinia/nuxt": "^0.4.11",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@pinia/nuxt": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vue/test-utils": "^2.4.1",
     "@vueuse/components": "^10.5.0",
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.5.0",
@@ -28,19 +32,22 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vitest": "^0.3.8",
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
-    "focus-trap": "^7.5.3",
-    "nuxt": "^3.7.4",
+    "focus-trap": "^7.5.4",
+    "jsdom": "^22.1.0",
+    "nuxt": "^3.8.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
-    "prettier-eslint": "^15.0.1",
-    "prettier-plugin-tailwindcss": "^0.5.5",
+    "prettier-eslint": "^16.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "string-similarity-js": "^2.1.4",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.4",
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "buffer": "^6.0.3",
