--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore .",
     "postinstall": "nuxt prepare",
     "preview": "nuxt preview",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -39,6 +40,7 @@
     "eslint-plugin-vitest": "^0.3.8",
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "focus-trap": "^7.5.4",
+    "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "nuxt": "^3.8.0",
     "postcss": "^8.4.31",
