--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore .",
     "postinstall": "nuxt prepare",
     "preview": "nuxt preview",
-    "test": "vitest",
+    "test": "vitest run --coverage",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-vue": "^4.4.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "@vue/test-utils": "^2.4.1",
     "@vueuse/components": "^10.5.0",
     "@vueuse/core": "^10.5.0",
