--- a/package.json
+++ b/package.json
@@ -41,16 +41,19 @@
     "eslint-plugin-vitest": "^0.3.8",
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "focus-trap": "^7.5.4",
+    "happy-dom": "^12.10.3",
     "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "nuxt": "^3.8.0",
+    "nuxt-vitest": "^0.11.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-eslint": "^16.1.1",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "string-similarity-js": "^2.1.4",
     "tailwindcss": "^3.3.4",
-    "vitest": "^0.34.6"
+    "vitest": "0.33.0",
+    "vitest-environment-nuxt": "^0.11.0"
   },
   "dependencies": {
     "buffer": "^6.0.3",
