--- a/package.json
+++ b/package.json
@@ -21,39 +21,39 @@
     "@nuxt/test-utils": "^3.8.1",
     "@nuxtjs/dotenv": "^1.4.1",
     "@pinia/nuxt": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@vitejs/plugin-vue": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-vue": "^4.5.2",
     "@vitest/coverage-v8": "^0.34.6",
     "@vue/test-utils": "^2.4.3",
-    "@vueuse/components": "^10.6.1",
-    "@vueuse/core": "^10.6.1",
-    "@vueuse/integrations": "^10.6.1",
-    "@vueuse/nuxt": "^10.6.1",
-    "@vueuse/router": "^10.6.1",
+    "@vueuse/components": "^10.7.0",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/integrations": "^10.7.0",
+    "@vueuse/nuxt": "^10.7.0",
+    "@vueuse/router": "^10.7.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vitest": "^0.3.10",
+    "eslint-plugin-vitest": "^0.3.17",
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "focus-trap": "^7.5.4",
     "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
-    "jsdom": "^22.1.0",
+    "jsdom": "^23.0.1",
     "nuxt": "^3.8.2",
     "nuxt-gtag": "^1.1.1",
-    "nuxt-security": "^1.0.0-rc.4",
+    "nuxt-security": "^1.0.0",
     "nuxt-vitest": "^0.11.5",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
     "prettier-eslint": "^16.1.2",
-    "prettier-plugin-tailwindcss": "^0.5.7",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "string-similarity-js": "^2.1.4",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.6",
     "vitest": "0.33.0",
     "vitest-environment-nuxt": "^0.11.5"
   },
