--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
-    "@nuxt/test-utils": "^3.9.0",
+    "@nuxt/test-utils": "^3.10.0",
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
@@ -31,7 +31,7 @@
     "@vueuse/integrations": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
     "@vueuse/router": "^10.7.2",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "axios": "^1.6.5",
     "date-fns": "^3.2.0",
     "eslint": "^8.56.0",
@@ -39,23 +39,22 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vitest": "^0.3.20",
-    "eslint-plugin-vuejs-accessibility": "^2.2.0",
+    "eslint-plugin-vuejs-accessibility": "^2.2.1",
     "focus-trap": "^7.5.4",
-    "happy-dom": "^12.10.3",
+    "happy-dom": "^13.1.4",
     "husky": "^8.0.3",
     "jsdom": "^23.2.0",
-    "nuxt": "^3.9.1",
-    "nuxt-gtag": "^1.1.2",
-    "nuxt-security": "^1.0.0",
-    "nuxt-vitest": "^0.11.5",
+    "nuxt": "^3.9.3",
+    "nuxt-security": "^1.0.1",
     "postcss": "^8.4.33",
-    "prettier": "^3.2.2",
+    "prettier": "^3.2.4",
     "prettier-eslint": "^16.2.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "string-similarity-js": "^2.1.4",
     "tailwindcss": "^3.4.1",
-    "vitest": "0.33.0",
-    "vitest-environment-nuxt": "^0.11.5"
+    "vitest": "1.2.1",
+    "vitest-environment-nuxt": "^1.0.0",
+    "vue-gtag-next": "^1.14.0"
   },
   "dependencies": {
     "buffer": "^6.0.3"
