--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxt/test-utils": "^3.11.0",
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
+    "@pinia/testing": "^0.1.3",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "@vitejs/plugin-vue": "^5.0.3",
@@ -44,6 +45,7 @@
     "happy-dom": "^13.3.5",
     "husky": "^9.0.7",
     "jsdom": "^24.0.0",
+    "nock": "^13.5.1",
     "nuxt": "^3.10.0",
     "nuxt-security": "^1.0.1",
     "postcss": "^8.4.33",
