--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-vue": "^5.0.4",
-    "@vitest/coverage-v8": "^1.3.0",
+    "@vitest/coverage-v8": "^1.3.1",
     "@vue/test-utils": "^2.4.4",
-    "@vueuse/components": "^10.7.2",
-    "@vueuse/core": "^10.7.2",
-    "@vueuse/integrations": "^10.7.2",
-    "@vueuse/nuxt": "^10.7.2",
-    "@vueuse/router": "^10.7.2",
+    "@vueuse/components": "^10.8.0",
+    "@vueuse/core": "^10.8.0",
+    "@vueuse/integrations": "^10.8.0",
+    "@vueuse/nuxt": "^10.8.0",
+    "@vueuse/router": "^10.8.0",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
@@ -42,11 +42,12 @@
     "eslint-plugin-vitest": "^0.3.22",
     "eslint-plugin-vuejs-accessibility": "^2.2.1",
     "focus-trap": "^7.5.4",
-    "happy-dom": "^13.3.8",
+    "happy-dom": "^13.4.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "nock": "^13.5.3",
     "nuxt": "^3.10.2",
+    "nuxt-gtag": "^1.2.0",
     "nuxt-security": "^1.1.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
@@ -54,9 +55,8 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "string-similarity-js": "^2.1.4",
     "tailwindcss": "^3.4.1",
-    "vitest": "1.3.0",
-    "vitest-environment-nuxt": "^1.0.0",
-    "vue-gtag-next": "^1.14.0"
+    "vitest": "1.3.1",
+    "vitest-environment-nuxt": "^1.0.0"
   },
   "dependencies": {
     "@vercel/postgres": "^0.7.2",
