--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
-    "@nuxt/test-utils": "^3.12.1",
+    "@nuxt/test-utils": "^3.13.0",
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
     "@pinia/testing": "^0.1.3",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitest/coverage-v8": "^1.6.0",
     "@vue/test-utils": "^2.4.6",
@@ -47,8 +47,8 @@
     "jsdom": "^24.0.0",
     "nock": "^13.5.4",
     "nuxt": "^3.11.2",
-    "nuxt-gtag": "^2.0.5",
-    "nuxt-security": "^1.4.3",
+    "nuxt-gtag": "^2.0.6",
+    "nuxt-security": "^2.0.0-beta.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
