--- a/package.json
+++ b/package.json
@@ -18,48 +18,48 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@nuxt/test-utils": "^3.13.1",
+    "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/dotenv": "^1.4.2",
-    "@pinia/nuxt": "^0.5.1",
-    "@pinia/testing": "^0.1.3",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
-    "@vitejs/plugin-vue": "^5.1.0",
-    "@vitest/coverage-v8": "^2.0.4",
+    "@pinia/nuxt": "^0.5.5",
+    "@pinia/testing": "^0.1.6",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.4",
     "@vue/test-utils": "^2.4.6",
-    "@vueuse/components": "^10.11.0",
-    "@vueuse/core": "^10.11.0",
-    "@vueuse/integrations": "^10.11.0",
-    "@vueuse/nuxt": "^10.11.0",
-    "@vueuse/router": "^10.11.0",
-    "autoprefixer": "^10.4.19",
-    "axios": "^1.7.2",
-    "date-fns": "^3.6.0",
-    "eslint": "^9.7.0",
+    "@vueuse/components": "^11.2.0",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/integrations": "^11.2.0",
+    "@vueuse/nuxt": "^11.2.0",
+    "@vueuse/router": "^11.2.0",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
-    "focus-trap": "^7.5.4",
-    "happy-dom": "^14.12.3",
-    "husky": "^9.1.1",
-    "jsdom": "^24.1.1",
-    "nock": "^13.5.4",
-    "nuxt": "^3.12.4",
-    "nuxt-gtag": "^2.0.7",
-    "nuxt-security": "^2.0.0-rc.9",
-    "postcss": "^8.4.39",
+    "focus-trap": "^7.6.0",
+    "happy-dom": "^15.7.4",
+    "husky": "^9.1.6",
+    "jsdom": "^24.1.3",
+    "nock": "^13.5.5",
+    "nuxt": "^3.13.2",
+    "nuxt-gtag": "^2.1.0",
+    "nuxt-security": "^2.0.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "string-similarity-js": "^2.1.4",
-    "tailwindcss": "^3.4.6",
-    "vitest": "2.0.4",
-    "vitest-environment-nuxt": "^1.0.0"
+    "tailwindcss": "^3.4.14",
+    "vitest": "2.1.4",
+    "vitest-environment-nuxt": "^1.0.1"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.9.0",
+    "@vercel/postgres": "^0.10.0",
     "buffer": "^6.0.3"
   },
   "packageManager": "yarn@3.6.3"
