--- a/package.json
+++ b/package.json
@@ -15,47 +15,48 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@nuxt/test-utils": "^3.14.4",
+    "@nuxt/test-utils": "^3.17.2",
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.5",
-    "@pinia/testing": "^0.1.6",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vitest/coverage-v8": "^2.1.4",
+    "@pinia/testing": "^0.1.7",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/coverage-v8": "^3.1.1",
     "@vue/test-utils": "^2.4.6",
-    "@vueuse/components": "^11.2.0",
-    "@vueuse/core": "^11.2.0",
-    "@vueuse/integrations": "^11.2.0",
-    "@vueuse/nuxt": "^11.2.0",
-    "@vueuse/router": "^11.2.0",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.7.7",
+    "@vueuse/components": "^13.0.0",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/integrations": "^13.0.0",
+    "@vueuse/nuxt": "^13.0.0",
+    "@vueuse/router": "^13.0.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "eslint": "^9.13.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
-    "focus-trap": "^7.6.0",
-    "happy-dom": "^15.7.4",
-    "husky": "^9.1.6",
-    "jsdom": "^24.1.3",
-    "nock": "^13.5.5",
-    "nuxt": "^3.13.2",
-    "nuxt-gtag": "^2.1.0",
-    "nuxt-security": "^2.0.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
+    "focus-trap": "^7.6.4",
+    "happy-dom": "^17.4.4",
+    "husky": "^9.1.7",
+    "jsdom": "^26.0.0",
+    "nock": "^14.0.2",
+    "nuxt": "^3.16.2",
+    "nuxt-gtag": "^3.0.2",
+    "nuxt-security": "^2.2.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-eslint": "^16.3.0",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "string-similarity-js": "^2.1.4",
-    "tailwindcss": "^3.4.14",
-    "vitest": "2.1.4",
+    "tailwindcss": "^4.1.3",
+    "vitest": "3.1.1",
     "vitest-environment-nuxt": "^1.0.1"
   },
   "dependencies": {
