--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxt/test-utils": "^3.18.0",
     "@nuxtjs/dotenv": "^1.4.2",
-    "@pinia/nuxt": "^0.5.5",
-    "@pinia/testing": "^0.1.7",
+    "@pinia/nuxt": "^0.11.1",
+    "@pinia/testing": "^1.0.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
@@ -61,7 +61,8 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3",
+    "pinia": "^3.0.3"
   },
   "packageManager": "yarn@3.6.3"
 }
