--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/vue-fontawesome": "^3.1.1",
+    "@nuxt/scripts": "0.11.10",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.11.2",
     "@pinia/testing": "^1.0.2",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/youtube": "^0.1.2",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "@unhead/vue": "^2.0.3",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-v8": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
@@ -49,13 +52,14 @@
     "nock": "^14.0.10",
     "nuxt": "^4.0.3",
     "nuxt-gtag": "^3.0.3",
+    "nuxt-lazytube": "^0.2.2",
     "nuxt-security": "^2.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-eslint": "^16.4.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "string-similarity-js": "^2.1.4",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.12",
     "vitest": "3.2.4",
     "vitest-environment-nuxt": "^1.0.1"
   },
