--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
+    "@vercel/speed-insights": "^1.3.1",
     "buffer": "^6.0.3",
     "pinia": "^3.0.4"
   },
